إضافة التصميم الكامل والتجاوب لكل الصفحات

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>غزاوي كورة - اللحظات التاريخية</title>
+    <title>غزاوي كورة | الرئيسية</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="logo">غزاوي <span>كورة</span></div>
         <nav>
             <ul>
-                <li><a href="#" class="active">الرئيسية</a></li>
+                <li><a href="index.html" class="active">الرئيسية</a></li>
                 <li><a href="table.html">ترتيب الدوريات</a></li>
                 <li><a href="news.html">الأخبار</a></li>
             </ul>
@@ -20,42 +20,26 @@
 
     <main class="container">
         <div class="card">
-            <div class="card-header">نصف النهائي - الذهاب</div>
-            <div class="match-content">
-                <div class="team">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_logo.svg/200px-FC_Barcelona_logo.svg.png" alt="برشلونة">
-                    <p>برشلونة</p>
-                </div>
+            <div class="match-header">نصف النهائي - الذهاب</div>
+            <div class="match-body">
+                <div class="team"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_logo.svg/100px-FC_Barcelona_logo.svg.png"><p>برشلونة</p></div>
                 <div class="score">3 - 0</div>
-                <div class="team">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/180px-Liverpool_FC.svg.png" alt="ليفربول">
-                    <p>ليفربول</p>
-                </div>
+                <div class="team"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/100px-Liverpool_FC.svg.png"><p>ليفربول</p></div>
             </div>
             <p class="description">تألق الساحر ميسي</p>
-            <button class="btn-outline">مشاهدة الملخص</button>
+            <button class="btn btn-outline">مشاهدة الملخص</button>
         </div>
 
         <div class="card highlight">
-            <div class="card-header">نصف النهائي - الإياب</div>
-            <div class="match-content">
-                <div class="team">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/180px-Liverpool_FC.svg.png" alt="ليفربول">
-                    <p>ليفربول</p>
-                </div>
-                <div class="score-highlight">4 - 0</div>
-                <div class="team">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_logo.svg/200px-FC_Barcelona_logo.svg.png" alt="برشلونة">
-                    <p>برشلونة</p>
-                </div>
+            <div class="match-header">نصف النهائي - الإياب</div>
+            <div class="match-body">
+                <div class="team"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/100px-Liverpool_FC.svg.png"><p>ليفربول</p></div>
+                <div class="score-green score">4 - 0</div>
+                <div class="team"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_logo.svg/100px-FC_Barcelona_logo.svg.png"><p>برشلونة</p></div>
             </div>
             <p class="description">ليلة المعجزة في أنفيلد</p>
-            <button class="btn-solid">مشاهدة الملخص</button>
+            <button class="btn btn-solid">مشاهدة الملخص</button>
         </div>
     </main>
-
-    <footer>
-        <p>© 2026 غزاوي كورة - الريادة في التصميم الرياضي</p>
-    </footer>
 </body>
 </html>
