--- a/table.html
+++ b/table.html
@@ -2,6 +2,8 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer">
     <title>ترتيب الدوري الإنجليزي - غزاوي كورة</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +18,7 @@
     </nav>
 
     <div class="table-container">
-        <h2>ترتيب الدوري الإنجليزي الممتاز 2025-2026</h2>
+        <h2 class="table-title">ترتيب الدوري الإنجليزي الممتاز 2026</h2>
         <table class="stats-table">
             <thead>
                 <tr>
@@ -24,32 +26,20 @@
                     <th>النادي</th>
                     <th>لعب</th>
                     <th>فوز</th>
-                    <th>تعادل</th>
-                    <th>خسارة</th>
                     <th>نقاط</th>
                 </tr>
             </thead>
             <tbody>
-                <tr><td>1</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/53/Arsenal_FC.svg/150px-Arsenal_FC.svg.png">أرسنال</td><td>24</td><td>16</td><td>5</td><td>3</td><td>53</td></tr>
-                <tr><td>2</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/eb/Manchester_City_FC_badge.svg/150px-Manchester_City_FC_badge.svg.png">مانشستر سيتي</td><td>23</td><td>14</td><td>4</td><td>5</td><td>46</td></tr>
-                <tr><td>3</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f9/Aston_Villa_FC_crest_%282023%29.svg/150px-Aston_Villa_FC_crest_%282023%29.svg.png">أستون فيلا</td><td>24</td><td>14</td><td>4</td><td>6</td><td>46</td></tr>
-                <tr><td>4</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/150px-Manchester_United_FC_crest.svg.png">مانشستر يونايتد</td><td>24</td><td>11</td><td>8</td><td>5</td><td>41</td></tr>
-                <tr><td>5</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/Chelsea_FC.svg/150px-Chelsea_FC.svg.png">تشيلسي</td><td>24</td><td>11</td><td>7</td><td>6</td><td>40</td></tr>
-                <tr><td>6</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/150px-Liverpool_FC.svg.png">ليفربول</td><td>24</td><td>11</td><td>6</td><td>7</td><td>39</td></tr>
-                <tr><td>7</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/2b/Brentford_FC_crest.svg/150px-Brentford_FC_crest.svg.png">برينتفورد</td><td>24</td><td>11</td><td>3</td><td>10</td><td>36</td></tr>
-                <tr><td>8</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c2/Fulham_FC_%28shield%29.svg/150px-Fulham_FC_%28shield%29.svg.png">فولهام</td><td>24</td><td>10</td><td>4</td><td>10</td><td>34</td></tr>
-                <tr><td>9</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Everton_FC_logo.svg/150px-Everton_FC_logo.svg.png">إيفرتون</td><td>24</td><td>9</td><td>7</td><td>8</td><td>34</td></tr>
-                <tr><td>10</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/Newcastle_United_Logo.svg/150px-Newcastle_United_Logo.svg.png">نيوكاسل</td><td>24</td><td>9</td><td>6</td><td>9</td><td>33</td></tr>
-                <tr><td>11</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/60/Sunderland_Association_Football_Club_logo.svg/150px-Sunderland_Association_Football_Club_logo.svg.png">سندرلانـد</td><td>23</td><td>8</td><td>9</td><td>6</td><td>33</td></tr>
-                <tr><td>12</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e5/AFC_Bournemouth_%282013%29.svg/150px-AFC_Bournemouth_%282013%29.svg.png">بورنموث</td><td>24</td><td>8</td><td>9</td><td>7</td><td>33</td></tr>
-                <tr><td>13</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/fd/Brighton_%26_Hove_Albion_logo.svg/150px-Brighton_%26_Hove_Albion_logo.svg.png">برايتون</td><td>24</td><td>7</td><td>10</td><td>7</td><td>31</td></tr>
-                <tr><td>14</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Crystal_Palace_FC_logo_%282022%29.svg/150px-Crystal_Palace_FC_logo_%282022%29.svg.png">كريستال بالاس</td><td>24</td><td>7</td><td>8</td><td>9</td><td>29</td></tr>
-                <tr><td>15</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Tottenham_Hotspur.svg/150px-Tottenham_Hotspur.svg.png">توتنهام</td><td>23</td><td>7</td><td>7</td><td>9</td><td>28</td></tr>
-                <tr><td>16</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/54/Leeds_United_F.C._logo.svg/150px-Leeds_United_F.C._logo.svg.png">ليدز يونايتد</td><td>24</td><td>6</td><td>8</td><td>10</td><td>26</td></tr>
-                <tr><td>17</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e3/Nottingham_Forest_logo.svg/150px-Nottingham_Forest_logo.svg.png">نوتنجهام</td><td>24</td><td>7</td><td>5</td><td>12</td><td>26</td></tr>
-                <tr><td>18</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c2/West_Ham_United_FC_logo.svg/150px-West_Ham_United_FC_logo.svg.png">وست هام</td><td>24</td><td>5</td><td>5</td><td>14</td><td>20</td></tr>
-                <tr><td>19</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/Burnley_F.C._Logo.svg/150px-Burnley_F.C._Logo.svg.png">بيرنلي</td><td>23</td><td>3</td><td>6</td><td>14</td><td>15</td></tr>
-                <tr><td>20</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/fc/Wolverhampton_Wanderers.svg/150px-Wolverhampton_Wanderers.svg.png">وولفرهامبتون</td><td>24</td><td>1</td><td>5</td><td>18</td><td>8</td></tr>
+                <tr><td>1</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg">أرسنال</td><td>24</td><td>16</td><td>53</td></tr>
+                <tr><td>2</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg">سيتي</td><td>23</td><td>14</td><td>46</td></tr>
+                <tr><td>3</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/f/f9/Aston_Villa_FC_crest_%282023%29.svg">أستون فيلا</td><td>24</td><td>14</td><td>46</td></tr>
+                <tr><td>4</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Manchester_United_FC_crest.svg">يونايتد</td><td>24</td><td>11</td><td>41</td></tr>
+                <tr><td>5</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/c/cc/Chelsea_FC.svg">تشيلسي</td><td>24</td><td>11</td><td>40</td></tr>
+                <tr><td>6</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg">ليفربول</td><td>24</td><td>11</td><td>39</td></tr>
+                <tr><td>7</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/2/2b/Brentford_FC_crest.svg">برينتفورد</td><td>24</td><td>11</td><td>36</td></tr>
+                <tr><td>8</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/c/c2/Fulham_FC_%28shield%29.svg">فولهام</td><td>24</td><td>10</td><td>34</td></tr>
+                <tr><td>17</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/e/e3/Nottingham_Forest_logo.svg">نوتنجهام</td><td>24</td><td>7</td><td>26</td></tr>
+                <tr><td>19</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/6/62/Burnley_F.C._Logo.svg">بيرنلي</td><td>23</td><td>3</td><td>15</td></tr>
             </tbody>
         </table>
     </div>
