--- a/table.html
+++ b/table.html
@@ -2,26 +2,63 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="referrer" content="no-referrer"> <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>غزاوي كورة - ترتيب البريميرليج الكامل</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">غزاوي <span>كورة</span></div>
         <ul class="nav-links">
             <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="table.html">الترتيب</a></li>
+            <li><a href="table.html" class="active">ترتيب الدوريات</a></li>
+            <li><a href="news.html">الأخبار</a></li>
         </ul>
     </nav>
-    <div class="table-container">
-        <table>
-            <thead><tr><th>#</th><th>النادي</th><th>نقاط</th></tr></thead>
-            <tbody>
-                <tr><td>1</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg">أرسنال</td><td>53</td></tr>
-                <tr><td>2</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg">سيتي</td><td>46</td></tr>
-                <tr><td>3</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/f/f9/Aston_Villa_FC_crest_%282023%29.svg">أستون فيلا</td><td>46</td></tr>
-                <tr><td>7</td><td class="team-cell"><img src="https://upload.wikimedia.org/wikipedia/en/2/2b/Brentford_FC_crest.svg">برينتفورد</td><td>36</td></tr>
-            </tbody>
-        </table>
-    </div>
+
+    <main class="main-container">
+        <div class="table-3d-card">
+            <h1 class="table-header">ترتيب الدوري الإنجليزي الممتاز 2025-2026</h1>
+            
+            <div class="glass-table-container">
+                <table class="standings-table">
+                    <thead>
+                        <tr>
+                            <th>المركز</th>
+                            <th>النادي</th>
+                            <th>لعب</th>
+                            <th>فوز</th>
+                            <th>تعادل</th>
+                            <th>خسارة</th>
+                            <th>نقاط</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="leader"><td>1</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/53/Arsenal_FC.svg/100px-Arsenal_FC.svg.png"><span>أرسنال</span></td><td>24</td><td>16</td><td>5</td><td>3</td><td class="points-cell">53</td></tr>
+                        <tr><td>2</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/eb/Manchester_City_FC_badge.svg/100px-Manchester_City_FC_badge.svg.png"><span>مانشستر سيتي</span></td><td>23</td><td>14</td><td>4</td><td>5</td><td class="points-cell">46</td></tr>
+                        <tr><td>3</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f9/Aston_Villa_FC_crest_%282023%29.svg/100px-Aston_Villa_FC_crest_%282023%29.svg.png"><span>أستون فيلا</span></td><td>24</td><td>14</td><td>4</td><td>6</td><td class="points-cell">46</td></tr>
+                        <tr><td>4</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/100px-Manchester_United_FC_crest.svg.png"><span>مانشستر يونايتد</span></td><td>24</td><td>11</td><td>8</td><td>5</td><td class="points-cell">41</td></tr>
+                        <tr><td>5</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/Chelsea_FC.svg/100px-Chelsea_FC.svg.png"><span>تشيلسي</span></td><td>24</td><td>11</td><td>7</td><td>6</td><td class="points-cell">40</td></tr>
+                        <tr><td>6</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/100px-Liverpool_FC.svg.png"><span>ليفربول</span></td><td>24</td><td>11</td><td>6</td><td>7</td><td class="points-cell">39</td></tr>
+                        <tr><td>7</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/2/2b/Brentford_FC_crest.svg/100px-Brentford_FC_crest.svg.png"><span>برينتفورد</span></td><td>24</td><td>11</td><td>3</td><td>10</td><td class="points-cell">36</td></tr>
+                        <tr><td>8</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c2/Fulham_FC_%28shield%29.svg/100px-Fulham_FC_%28shield%29.svg.png"><span>فولهام</span></td><td>24</td><td>10</td><td>4</td><td>10</td><td class="points-cell">34</td></tr>
+                        <tr><td>9</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Everton_FC_logo.svg/100px-Everton_FC_logo.svg.png"><span>إيفرتون</span></td><td>24</td><td>9</td><td>7</td><td>8</td><td class="points-cell">34</td></tr>
+                        <tr><td>10</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/Newcastle_United_Logo.svg/100px-Newcastle_United_Logo.svg.png"><span>نيوكاسل</span></td><td>24</td><td>9</td><td>6</td><td>9</td><td class="points-cell">33</td></tr>
+                        
+                        <tr><td>11</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/60/Sunderland_Association_Football_Club_logo.svg/100px-Sunderland_Association_Football_Club_logo.svg.png"><span>سندرلاند</span></td><td>23</td><td>8</td><td>6</td><td>9</td><td class="points-cell">33</td></tr>
+                        <tr><td>12</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e5/AFC_Bournemouth_%282013%29.svg/100px-AFC_Bournemouth_%282013%29.svg.png"><span>بورنموث</span></td><td>24</td><td>8</td><td>7</td><td>9</td><td class="points-cell">33</td></tr>
+                        <tr><td>13</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f0/Brighton_And_Hove_Albion_logo.svg/100px-Brighton_And_Hove_Albion_logo.svg.png"><span>برايتون</span></td><td>24</td><td>7</td><td>7</td><td>10</td><td class="points-cell">31</td></tr>
+                        <tr><td>14</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a2/Crystal_Palace_FC_logo_%282022%29.svg/100px-Crystal_Palace_FC_logo_%282022%29.svg.png"><span>كريستال بالاس</span></td><td>24</td><td>7</td><td>9</td><td>8</td><td class="points-cell">29</td></tr>
+                        <tr><td>15</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b4/Tottenham_Hotspur.svg/100px-Tottenham_Hotspur.svg.png"><span>توتنهام</span></td><td>23</td><td>7</td><td>9</td><td>7</td><td class="points-cell">28</td></tr>
+                        <tr><td>16</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/54/Leeds_United_F.C._logo.svg/100px-Leeds_United_F.C._logo.svg.png"><span>ليدز يونايتد</span></td><td>24</td><td>6</td><td>10</td><td>8</td><td class="points-cell">26</td></tr>
+                        <tr><td>17</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e3/Nottingham_Forest_logo.svg/100px-Nottingham_Forest_logo.svg.png"><span>نوتنجهام</span></td><td>24</td><td>7</td><td>12</td><td>5</td><td class="points-cell">26</td></tr>
+                        <tr><td>18</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c2/West_Ham_United_FC_logo.svg/100px-West_Ham_United_FC_logo.svg.png"><span>وست هام</span></td><td>24</td><td>5</td><td>14</td><td>5</td><td class="points-cell">20</td></tr>
+                        <tr><td>19</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/Burnley_F.C._Logo.svg/100px-Burnley_F.C._Logo.svg.png"><span>بيرنلي</span></td><td>23</td><td>3</td><td>14</td><td>6</td><td class="points-cell">15</td></tr>
+                        <tr><td>20</td><td class="team-info"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/fc/Wolverhampton_Wanderers.svg/100px-Wolverhampton_Wanderers.svg.png"><span>وولفرهامبتون</span></td><td>24</td><td>1</td><td>18</td><td>5</td><td class="points-cell">8</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
