--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="referrer" content="no-referrer">
-    <title>غزاوي كورة - الرئيسية</title>
+    <title>غزاوي كورة - تجربة 3D</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -18,36 +16,57 @@
         </ul>
     </nav>
 
-    <main class="hero-section">
-        <div class="container">
-            <h2 class="section-title">إياب نصف النهائي</h2>
-            <h1 class="main-title">أهم المباريات</h1>
+    <div class="ticker-wrap">
+        <div class="ticker">
+            <span class="ticker-item">🌟 جديد: استمتع بتجربة التصفح ثلاثية الأبعاد الحقيقية..</span>
+            <span class="ticker-item">⚽ ريمونتادا الأنفيلد: ليفربول يصعق برشلونة برباعية نظيفة!</span>
+        </div>
+    </div>
 
-            <div class="match-card-3d">
-                <div class="teams-container">
-                    <div class="team">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg" alt="برشلونة">
-                        <h3>برشلونة</h3>
-                    </div>
-                    
-                    <div class="score-box">
-                        <span class="score">0 - 4</span>
-                    </div>
-
-                    <div class="team">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg" alt="ليفربول">
-                        <h3>ليفربول</h3>
+    <main class="main-container">
+        <div class="matches-grid">
+            <div class="card-3d-container">
+                <div class="match-card highlight-card">
+                    <div class="card-content">
+                        <header class="match-meta">نصف النهائي - الإياب</header>
+                        <div class="score-row">
+                            <div class="team">
+                                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/300px-Liverpool_FC.svg.png" alt="ليفربول">
+                                <span>ليفربول</span>
+                            </div>
+                            <div class="score-badge win">4 - 0</div>
+                            <div class="team">
+                                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_%28crest%29.svg/300px-FC_Barcelona_%28crest%29.svg.png" alt="برشلونة">
+                                <span>برشلونة</span>
+                            </div>
+                        </div>
+                        <p class="match-desc">ليلة المعجزة في أنفيلد</p>
+                        <button class="btn-3d">مشاهدة الملخص</button>
                     </div>
                 </div>
-                
-                <p class="match-desc">ليلة المعجزة في أنفيلد</p>
-                <button class="btn-3d" onclick="window.location.href='https://www.youtube.com/results?search_query=liverpool+vs+barcelona+4-0+highlights'">مشاهدة الملخص</button>
+            </div>
+
+            <div class="card-3d-container">
+                <div class="match-card">
+                    <div class="card-content">
+                        <header class="match-meta">نصف النهائي - الذهاب</header>
+                        <div class="score-row">
+                            <div class="team">
+                                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_%28crest%29.svg/300px-FC_Barcelona_%28crest%29.svg.png" alt="برشلونة">
+                                <span>برشلونة</span>
+                            </div>
+                            <div class="score-badge">3 - 0</div>
+                            <div class="team">
+                                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/300px-Liverpool_FC.svg.png" alt="ليفربول">
+                                <span>ليفربول</span>
+                            </div>
+                        </div>
+                        <p class="match-desc">تألق الساحر ميسي</p>
+                        <button class="btn-3d outline">مشاهدة الملخص</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
-
-    <footer class="footer">
-        <p>تجربة التصفح ثلاثية الأبعاد الحقيقية.. جميع الحقوق محفوظة لـ غزاوي كورة</p>
-    </footer>
 </body>
 </html>
